--- a/assets/style.css
+++ b/assets/style.css
@@ -317,3 +317,24 @@ div.media {
 .filter__label {
   margin-right: 10px;
 }
+
+.output-box {
+  border: 1px solid #e6e6e6;
+  padding: 10px;
+  margin-top: 10px;
+  background-color: #f6f6f6;
+  min-height: 50px;
+}
+
+.container {
+  display: flex;
+}
+
+.input-area {
+  flex: 1;
+  padding-right: 20px;
+}
+
+.output-area {
+  flex: 2;
+}
